# mtl-parking-signs

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
noExpoReactCode/: App.js  app.json  package-lock.json  package.json  react-native.config.js
noExpoReactCode/android/: build.gradle  settings.gradle
noExpoReactCode/android/app/: _BUCK  build.gradle
noExpoReactCode/android/app/src/debug/java/com/noexporeactcode/: ReactNativeFlipper.java
noExpoReactCode/android/app/src/main/: AndroidManifest.xml
noExpoReactCode/android/app/src/main/java/com/noexporeactcode/: MainActivity.java  MainApplication.java
noExpoReactCode/android/app/src/main/res/values/: strings.xml
noExpoReactCode/components/: mapViewComponent.js  worker.thread.js
noExpoReactCode/ios/: Podfile
noExpoReactCode/ios/noExpoReactCode/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
noExpoReactCode/ios/noExpoReactCode.xcodeproj/: project.pbxproj
noExpoReactCode/ios/noExpoReactCode.xcodeproj/xcshareddata/xcschemes/: noExpoReactCode-tvOS.xcscheme  noExpoReactCode.xcscheme
noExpoReactCode/ios/noExpoReactCodeTests/: noExpoReactCodeTests.m
