[tool.poetry]
name = "mtl-stationnement"
version = "0.1.0"
description = "Dataset and viewer of geolocating traffic signs regulating on-street parking"
authors = ["brunopcarv"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
commitizen = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
